--- a/src/molecules/Footer/style.scss
+++ b/src/molecules/Footer/style.scss
@@ -1,7 +1,4 @@
-.post-footer {
-  hr {
-    border-color: #f05f40 !important;
-    border-width: 3px !important;
-    max-width: 50px !important;
-  }
+.footer {
+  background-color: #ffffff;
+  padding: 3rem 1.5rem 6rem;
 }
