--- a/src/molecules/PostFooter/style.scss
+++ b/src/molecules/PostFooter/style.scss
@@ -2,6 +2,6 @@
   hr {
     border-color: #f05f40 !important;
     border-width: 3px !important;
-    max-width: 50px !important;
+    max-width: 100% !important;
   }
 }
