[+] update styles.scss

--- a/src/layouts/gatsrap.scss
+++ b/src/layouts/gatsrap.scss
@@ -47,3 +47,14 @@ body {
 .soon-title {
     margin: 0 0 50px;
 }
+
+.hero-body {
+    flex-grow: 1;
+    flex-shrink: 0;
+    padding: 15rem 1.5rem;
+}
+
+.hero-body {
+    flex-grow: 0;
+    flex-shrink: 0;
+}
